--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -63,7 +63,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Резуме</h2>
+          <h2>Резюме</h2>
         </div>
 
         <div class="row">
