--- a/templates/inc/_footer.html
+++ b/templates/inc/_footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
     <div class="container">
-      <div class="credits"> Разработано <a href="https://kht-portfolio.herokuapp.com" target="_blank">Karimzhonov Khusniddin</a></div>
+      <div class="credits"> Разработан <a href="https://kht-portfolio.herokuapp.com" target="_blank">Karimzhonov Khusniddin</a></div>
     </div>
   </footer>
